new arrows entry from downside

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "generador de diagramas en formato Drawio xml",
   "main": "generator.js",
   "scripts": {
-    "start": "node scripts/generator.js"
+    "start": "node scripts/generator.js",
+    "diagram": "node scripts/generator.js",
+    "generate": "node scripts/generator.js"
   },
   "dependencies": {
     "figlet": "~1.5.0",
